--- a/templates/editar_encuesta.html
+++ b/templates/editar_encuesta.html
@@ -29,15 +29,19 @@
           </a>
           <a class="nav-link" href="/login">
             <button class="btn btn-outline-danger" type="button">LogOut</button>
-        
         </a> 
         </div>
         </div>
       </div>
     </nav>
-    
-  
+    <div>
+      <h1 name="title"></h1>
+      <p name="description"></p>
+      <hr>
+      <div>
 
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	
 </body>
