--- a/templates/encuestados.html
+++ b/templates/encuestados.html
@@ -32,7 +32,7 @@
             </div>
         </nav>
     </header>
-    <ul class="nav nav-tabs" id="myTab" role="tablist">
+    <ul class="nav nav-tabs bg-dark text-white" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
           <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Lista</button>
         </li>
