--- a/templates/encuestas.html
+++ b/templates/encuestas.html
@@ -36,7 +36,7 @@
         </nav>
     </header>
    
-    <ul class="nav nav-tabs " id="myTab" role="tablist">
+    <ul class="nav nav-tabs bg-dark text-white " id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
 
             <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#ready" type="button" role="tab" aria-controls="home" aria-selected="true">Por hacer</button>
