--- a/templates/encuestas.html
+++ b/templates/encuestas.html
@@ -72,7 +72,9 @@
                           <td scope="col">{{pollr.4}}</td>
                           <td scope="col">
                               <a href="/enviar_encuesta/{{pollr.0}}" class="btn btn-success">Enviar</a>
-                              <a href="#" class="btn btn-secondary">Visualizar</a> <!--/editar_encuesta/{{pollr.1}}-->
+                              
+                              <a href="/editar_encuesta/{{pollr.0}}" class="btn btn-secondary">Visualizar</a> <!--/editar_encuesta/{{pollr.1}}-->
+                              
                               <a href="/eliminar_encuesta/{{pollr.0}}" class="btn btn-danger">Eliminar</a><!--/eliminar_encuesta/{{pollr.1}}-->
                           </td>
                       </form>
