--- a/templates/encuestas.html
+++ b/templates/encuestas.html
@@ -116,7 +116,7 @@
                           <td scope="col">
                         
                                 <a href="/cerrar_encuesta/{{pollo.0}}" class="btn btn-warning">Cerrar</a>
-                                <a href="#" class="btn btn-secondary">Visualizar</a> <!--/editar_encuesta/{{pollo.1}}-->
+                                <a href="/editar_encuesta/{{pollo.0}}" class="btn btn-secondary">Visualizar</a> <!--/editar_encuesta/{{pollo.1}}-->
                                 <a href="/eliminar_encuesta/{{pollo.0}}" class="btn btn-danger">Eliminar</a><!--/eliminar_encuesta/{{pollo.1}}-->
                           </td>
                           </form>
@@ -156,7 +156,7 @@
                           <td scope="col">
                             <!--<button type="button" class="btn btn-secondary ">Visualizar</button>
                               <button type="button" class="btn btn-danger">Eliminar</button>-->
-                              <a href="#" class="btn btn-secondary">Visualizar</a> <!--/editar_encuesta/{{pollc.1}}-->
+                              <a href="/editar_encuesta/{{pollc.0}}" class="btn btn-secondary">Visualizar</a> <!--/editar_encuesta/{{pollc.1}}-->
                               <a href="/eliminar_encuesta/{{pollc.0}}" class="btn btn-danger">Eliminar</a><!--/eliminar_encuesta/{{pollc.1}}-->
                           </td>
                       </form>
